Fixed z-index for feedback overlay

--- a/bogenliga/src/app/app.component.scss
+++ b/bogenliga/src/app/app.component.scss
@@ -155,6 +155,7 @@
   height: auto;
   position: relative;
   transition: all 5s ease-in-out;
+  z-index: 100;
 }
 /* erste Überschrift im Popup Fenster*/
 .popup h2 {
