--- a/bogenliga/src/app/components/notification/notification.component.scss
+++ b/bogenliga/src/app/components/notification/notification.component.scss
@@ -1,11 +1,3 @@
-/* Farbkonzept Website */
-$primary: #02bdd5; // Links, Navbar
-$primary-light: #b4ffff; // Sidebar-Background
-$primary-dark: #007c91; // Sidebar-Font
-$secondary: #ffc107; // hover Tables, Button
-$secondary-light: #fff350;
-$secondary-dark: #ff833a; // hover Links, Logo
-
 #notification-title {
   display: flex;
   flex-direction: row;
