--- a/bogenliga/src/app/modules/home/components/home/home.component.scss
+++ b/bogenliga/src/app/modules/home/components/home/home.component.scss
@@ -94,7 +94,6 @@ h1{
     padding: 1rem;
     background: $true-white;
     position: relative;
-    z-index: 1;
   }
   p {
     position: relative;
